[package]
name = "free-sudoku-pwa"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.7", features = ["csr"] }
console_error_panic_hook = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_bytes = "0.11"
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
  "Window",
  "Document",
  "Element",
  "HtmlElement",
  "Storage",
  "console",
  "KeyboardEvent",
  "ServiceWorkerContainer",
  "ServiceWorkerRegistration",
] }
